Fix for overflow-x scrolling on mobile phones
Scroll bar would show after the table of contents snapped to bottom, namely on phones in portrait mode. The extra padding seemed to be causing this. That padding is not longer needed once the TOC is at the bottom.

--- a/_sass/screen.scss
+++ b/_sass/screen.scss
@@ -4739,6 +4739,7 @@ br.big {
         background: #fff;
     }
     .toc+.toccontent {
+	padding: 0;    
         border: none;
     }
     .toccontent .toccontent-block {
